<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    
    <groupId>com.googlecode</groupId>
    <artifactId>jira-suite-utilities</artifactId>
    <name>JIRA Suite Utilities</name>
    <version>1.4.12-SNAPSHOT</version>
    <packaging>atlassian-plugin</packaging>

    <organization>
        <name>beecom AG</name>
        <url>http://www.beecom.ch/</url>
    </organization>

    <description>Many objects to extend JIRA</description>
    <inceptionYear>2007</inceptionYear>

    <developers>
        <developer>
            <name>Gustavo Martin</name>
            <id>gmartin</id>
            <email>gmartin@quadratica.com.ar</email>
            <organization>Quadratica SRL</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Bettina Zucker</name>
            <id>bettina</id>
            <email>bettina.zucker@eu.panasonic.com</email>
            <organization>PASE GmbH</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Alexey Abashev</name>
            <id>abashev</id>
            <email>abashev at gmail dot com</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Cristiane Fontana</name>
            <id>cfontana</id>
            <email>no_spam@no_spam.com</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Stefan Forstmoser</name>
            <id>sforstmoser</id>
            <email>no_spam@no_spam.com</email>
            <organization>beecom AG</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Anna Staeubli</name>
            <id>astaeubli</id>
            <email>no_spam@no_spam.com</email>
            <organization>beecom AG</organization>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>maven-jira-plugin</artifactId>
                <version>${jira.plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <productVersion>${jira.version}</productVersion>
                    <productDataVersion>${jira.data.version}</productDataVersion>
                    <productDataPath>${project.basedir}/src/test/resources/generated-test-resources.zip</productDataPath>
                    <jvmArgs>-Xmx768m -XX:MaxPermSize=356m</jvmArgs>
                    <pluginArtifacts>
                        <pluginArtifact>
                            <groupId>com.atlassian.jira.tests</groupId>
                            <artifactId>jira-testkit-plugin</artifactId>
                            <version>${testkit.version}</version>
                        </pluginArtifact>
                    </pluginArtifacts>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-api</artifactId>
            <version>${jira.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-core</artifactId>
            <version>${jira.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-func-tests</artifactId>
            <version>${jira.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.atlassian.jira.tests</groupId>
            <artifactId>jira-testkit-client</artifactId>
            <version>${testkit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <scm>
        <connection>${scm.connection}</connection>
        <developerConnection>${scm.connection}</developerConnection>
    </scm>

    <distributionManagement>
        <repository>
            <uniqueVersion>true</uniqueVersion>
            <id>mvnrepo.beecom.ch</id>
            <name>beecom mvn repo - releases</name>
            <url>http://mvnrepo.beecom.ch/inhouse</url>
            <layout>default</layout>
        </repository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jira.version>6.3.11</jira.version>
        <jira.data.version>6.3</jira.data.version>
        <jira.plugin.version>6.1.2</jira.plugin.version> <!-- upgraded from 4.2.20 -->
        
        <testkit.version>6.3.11</testkit.version> <!-- upgraded from 6.0.51 -->

        <scm.connection>scm:git:git://github.com/atlassian/jira-suite-utilities.git</scm.connection>
    </properties>
</project>
